<resources>
    <string name="app_name">University Student Assistant</string>

    <string name="universities">Universities</string>
    <string name="timetable">Timetable</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string-array name="my_header_title">
        <item></item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="err_msg_enter_mobile">Please enter a valid mobile number</string>
    <string name="msg_profile_update_success">Profile was updated successfully</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="empty_space">\" \"</string>
    <string name="title_activity_university">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search_universities">University Data</string>
    <string name="title_my_universities">My Universities</string>
    <string name="search_title">Search for univesities...</string>
    <string name="profile">Profile</string>
    <string name="favourite_universities">Add your favourite universities here!</string>
    <string name="brn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="hint_subject_name">Subject</string>
    <string name="hint_location">Location</string>
    <string name="hint_day_of_week">Day of the Week</string>
    <string name="hint_start_time">From</string>
    <string name="hint_end_time">Until</string>
    <string name="acceptance_rate">Acceptance rate:  </string>
    <string name="graduation_rate">Graduation rate:  </string>
    <string name="string_cost">Average cost: $</string>
    <string name="percent_sign">%</string>
    <string name="dollar_sign">$</string>
    <string name="tab">\u0009</string>
    <string name="string_sort">Sort</string>
    <string name="string_filter">Filter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">order</string>
    <string name="string_dummy_text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries</string>
    <string name="string_teacher">Teacher</string>
    <string name="string_subject_name_is_empty">Name should be filled</string>
    <string name="days_of_week">Days of Week</string>
    <string name="string_color">Color</string>
    <string name="string_choose_color">Choose color for the subject</string>
    <string name="add_valid_subject_name">Please, add a subject name</string>
    <string name="string_default_color">#f84c44</string>
    <string name="string_edit_subject">Edit Subject</string>

    <string-array name="rangeSliderValues">
        <item>1</item>
        <item>100</item>
    </string-array>

    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>


</resources>