<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightGrey"
    android:orientation="vertical"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:paddingHorizontal="8dp">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_uni_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Harvard"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Cambridge, Massachusetts"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_uni_name" />


            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Address"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_location" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/string_cost"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_address" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_cost_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="24 000 $"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_cost"
                app:layout_constraintStart_toEndOf="@id/txt_cost" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_acc_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/acceptance_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_cost" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_acc_rate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="56%"
                android:layout_marginStart="2dp"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_acc_rate"
                app:layout_constraintStart_toEndOf="@id/txt_acc_rate" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_grad_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/graduation_rate"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_acc_rate"
                app:layout_constraintEnd_toStartOf="@id/txt_grad_rate_value" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_grad_rate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="34%"
                android:layout_marginStart="2dp"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_grad_rate"
                app:layout_constraintEnd_toEndOf="parent" />


            <ImageView
                android:id="@+id/img_university"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="fitCenter"
                android:src="@drawable/university_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_acc_rate" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:text="@string/string_dummy_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_university" />

            <RelativeLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_description">

                <TextView
                    android:id="@+id/txt_web_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/img_favourite"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:text="https://www.harvard.edu/"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/img_favourite"
                    android:layout_width="71dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="17dp"
                    android:background="@color/white"
                    android:src="@drawable/fav_button" />

            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>